@@ -1,5 +1,8 @@
 Revision history for HTML::FormWidgets
 
+         - Changed flds attr to fields in Table
+         - Add TableRow type to support LiveGrids
+         - Bug fix data lookup in Template
          - Added modalDialogs to Chooser
 
 0.14.370 2012-09-05
